force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Call_3_Completed__c.field-meta.xml
<CustomField>
    <fullName>fpro__Call_3_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set to True if the analysis call is completed (used in VF page)</description>
    <inlineHelpText>set to True if the analysis call is completed (used in VF page)</inlineHelpText>
    <label>zz_Deprecated</label>
    <type>Checkbox</type>
</CustomField>