force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Field_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>fpro__Field_Type_Status__c</fullName>
    <formula>IF( fpro__NamespacePrefix__c != &apos;&apos;, &apos;Managed Field&apos;,
IF( fpro__Is_Custom_Field__c, &apos;Custom Field&apos;,
&apos;Standard Field&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Type (Status)</label>
    <type>Text</type>
</CustomField>