force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Is_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>fpro__Is_Custom_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the field is a custom field (true) or not (false).</description>
    <inlineHelpText>Indicates whether the field is a custom field (true) or not (false).</inlineHelpText>
    <label>Is Custom Field?</label>
    <type>Checkbox</type>
</CustomField>