force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Is_Required__c.field-meta.xml
<CustomField>
    <fullName>fpro__Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the field requires a value on creation (true) or not (false).</description>
    <inlineHelpText>Indicates whether the field requires a value on creation (true) or not (false).</inlineHelpText>
    <label>Is Required?</label>
    <type>Checkbox</type>
</CustomField>