force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>fpro__Object_Type__c</fullName>
    <formula>IF( CONTAINS(fpro__Object_API_Name__c, &apos;__cmt&apos;), &apos;Custom Settings&apos;,
IF( CONTAINS(fpro__Object_API_Name__c, &apos;__mdt&apos;), &apos;Custom Metadata Type&apos;,
IF( CONTAINS(fpro__Object_API_Name__c, &apos;__&apos;), &apos;Custom Object&apos;,
&apos;Standard Object&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Type</label>
    <type>Text</type>
</CustomField>