force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__References_Total_Count_Automations__c.field-meta.xml
<CustomField>
    <fullName>fpro__References_Total_Count_Automations__c</fullName>
    <description>Flow
Workflow Field Updates
Workflow Rules
Formula Fields
Validation Rules</description>
    <formula>fpro__References_Flow_Count__c +
fpro__References_Formula_Fields_Count__c +
fpro__References_Validation_Rules_Count__c +
fpro__References_Workflow_Field_Updates_Count__c +
fpro__References_Workflow_Rules_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>References Total Count (Automations)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>