force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>fpro__Relationship_Name__c</fullName>
    <description>If specified, indicates the value for one-to-many relationships. For example, in the object MyObject that had a relationship to YourObject, the relationship name might be YourObjects.</description>
    <inlineHelpText>If specified, indicates the value for one-to-many relationships. For example, in the object MyObject that had a relationship to YourObject, the relationship name might be YourObjects.</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>