force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Summarized_Field__c.field-meta.xml
<CustomField>
    <fullName>fpro__Summarized_Field__c</fullName>
    <description>Represents the field on the detail row that is being summarized.</description>
    <inlineHelpText>Represents the field on the detail row that is being summarized.</inlineHelpText>
    <label>Summarized Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>