force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Track_History__c.field-meta.xml
<CustomField>
    <fullName>fpro__Track_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether history tracking is enabled for the field (true) or not (false).</description>
    <inlineHelpText>Indicates whether history tracking is enabled for the field (true) or not (false).</inlineHelpText>
    <label>Track History?</label>
    <type>Checkbox</type>
</CustomField>